@@ -3,6 +3,7 @@
 	* shr.el: Add headings.
 	(shr-ensure-paragraph): Actually work.
 	(shr-tag-li): Make <ul> prettier.
+	(shr-insert): Get white space at the beginning/end of elements right.
 
 2010-10-03  Julien Danjou  <julien@danjou.info>
 
